--- a/.github/workflows/blog-post.yml
+++ b/.github/workflows/blog-post.yml
@@ -10,4 +10,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
+          max_post_count: 10
           feed_list: "https://dev.to/feed/sachinchaurasiya"
