--- a/.github/workflows/hashnode.yml
+++ b/.github/workflows/hashnode.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   update_blogs:
     name: 'Hashnode Latest Blogs'
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: 'Fetch Repository Contents'
         uses: actions/checkout@main
