--- a/.github/workflows/hashnode.yml
+++ b/.github/workflows/hashnode.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@main
 
       - name: 'Hashnode Blog Action'
-        uses: "Sachin-chaurasiya/hashnode-blog-action@main"
+        uses: "Sachin-chaurasiya/hashnode-blog-action@v0.0.9"
         with:
           HASHNODE_PUBLICATION_NAME: 'blog.sachinchaurasiya.dev'
           FORMAT: 'stacked'
